--- toList() optimization --- Exercise 01 "Consumer Print" from the lesson for Functional Programming, a part of Java Advanced course.